--- a/index.html
+++ b/index.html
@@ -248,8 +248,9 @@
 <!-- -->
 
 
-
+<div class="container">
 <section class="contacto" id="contacto">
+
     <div class="form">
         <h2>Contacto</h2>
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Rem expedita dignissimos neque, dolor ab tempora
@@ -264,6 +265,7 @@
         <a href="#"><i class="fa fa-whatsapp" aria-hidden="true"></i>
             Axolotl Software</a>
     </div>
+
     <form action="#" autocomplete="off">
         <input type="text" name="nombre" placeholder="Tu nombre o el de tu empresa" class="campo">
         <input type="text" name="correro" placeholder="E-mail" class="campo">
@@ -277,7 +279,7 @@
         </button>
     </form>
 </section>
-
+</div>
 
 <script src="bootstrap-5.3.2-dist/js/bootstrap.bundle.min.js"></script>   
 </body>
