--- a/index.html
+++ b/index.html
@@ -15,13 +15,21 @@
      <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
      <link href="https://fonts.googleapis.com/css2?family=Golos+Text&display=swap" rel="stylesheet">
 
+
+     <script src="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.3.0/js/all.min.js"
+     integrity="sha512-2bMhOkE/ACz21dJT8zBOMgMecNxx0d37NND803ExktKiKdSzdwn+L7i9fdccw/3V06gM/DBWKbYmQvKMdAA9Nw=="
+     crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+ <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.3.0/css/all.min.css"
+     integrity="sha512-SzlrxWUlpfuzQ+pcUCosxcglQRNAq/DZjVsC0lE40xsADsfeQoEypE+enwcOiGjk/bSuGGKHEyjSoQ1zVisanQ=="
+     crossorigin="anonymous" referrerpolicy="no-referrer" />
+
 </head>
 
  <header>
     <nav class="navbar navbar-expand-lg">
   <div class="container">
     <a class="navbar-brand" href="#">
-        <h3 class="logo">AXOLOTL SOFTWARE</h3>
+        <h1 class="logo">AXOLOTL SOFTWARE</h1>
     </a>
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
@@ -29,7 +37,7 @@
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
       <ul class="navbar-nav ms-auto">
         <li class="nav-item">
-          <a class="nav-link" aria-current="page" href="#inicio">Inicio</a>
+          <a class="nav-link" href="#inicio">Inicio</a>
         </li>
         <li class="nav-item">
           <a class="nav-link" href="#nosotros">Nosotros</a>
@@ -83,7 +91,7 @@
         <h2>Todo lo que necesitas </h2>
         <h2>en un solo lugar</h2>
 
-        <button type="button" class="comenzar" data-bs-toggle="modal" data-bs-target="#ModalNosotros">
+        <button type="button" class="comenzar btn" data-bs-toggle="modal" data-bs-target="#ModalNosotros">
             <span>Comenzar ahora</span>
         </button>
 
@@ -106,7 +114,7 @@
 </div>
         </div>
         <div class="modal-footer">
-            <button class="enviarForm" type="submit">
+            <button class="enviarForm btn" type="submit">
                 <span>
                     Enviar
                 </span>
@@ -235,10 +243,10 @@
 </div>
 
     <section class="cinco">
-        <button class="comenzar">
+        <button class="comenzar2 btn">
             <span>¡Comencemos!</span>
         </button>
-        <button class="comenzar">
+        <button class="comenzar2 btn">
             <span>¿Tienes dudas?</span>
         </button>
     </section>
@@ -247,40 +255,126 @@
 
 <!-- -->
 
+<div class="container">
+    <section class="tecnologias">
+        <h1>Algunas de las tecnologias que trabajamos para ti:</h1>
+        <div class="slider">
+            <div class="slide-track">
+                <div class="slide"><img src="img/AI.png" alt="">
+                </div>
+                <div class="slide"><img src="img/AJAX.png" alt="">
+                </div>
+                <div class="slide"><img src="img/ANGULAR.png" alt="">
+                </div>
+                <div class="slide"><img src="img/css.png" alt="">
+                </div>
+                <div class="slide"><img src="img/FIGMA.png" alt="">
+                </div>
+                <div class="slide"><img src="img/html.png" alt="">
+                </div>
+                <div class="slide"><img src="img/js.png" alt="">
+                </div>
+                <div class="slide"><img src="img/LARAVEL.png" alt="">
+                </div>
+                <div class="slide"><img src="img/node.png" alt="">
+                </div>
+                <div class="slide"><img src="img/php.png" alt="">
+                </div>
+                <div class="slide"><img src="img/PS.png" alt="">
+                </div>
+                <div class="slide"><img src="img/REAC.png" alt="">
+                </div>
+                <div class="slide"><img src="img/SQL.png" alt="">
+                </div>
+                <div class="slide"><img src="img/XD.png" alt="">
+                </div>
+                <div class="slide"><img src="img/AI.png" alt="">
+                </div>
+                <div class="slide"><img src="img/AJAX.png" alt="">
+                </div>
+                <div class="slide"><img src="img/ANGULAR.png" alt="">
+                </div>
+                <div class="slide"><img src="img/css.png" alt="">
+                </div>
+                <div class="slide"><img src="img/FIGMA.png" alt="">
+                </div>
+                <div class="slide"><img src="img/html.png" alt="">
+                </div>
+                <div class="slide"><img src="img/js.png" alt="">
+                </div>
+                <div class="slide"><img src="img/LARAVEL.png" alt="">
+                </div>
+                <div class="slide"><img src="img/node.png" alt="">
+                </div>
+                <div class="slide"><img src="img/php.png" alt="">
+                </div>
+                <div class="slide"><img src="img/PS.png" alt="">
+                </div>
+                <div class="slide"><img src="img/REAC.png" alt="">
+                </div>
+                <div class="slide"><img src="img/SQL.png" alt="">
+                </div>
+                <div class="slide"><img src="img/XD.png" alt="">
+                </div>
+            </div>
+        </div>
+
+    </section>
+</div>
+
 
 <div class="container">
 <section class="contacto" id="contacto">
-
-    <div class="form">
-        <h2>Contacto</h2>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Rem expedita dignissimos neque, dolor ab tempora
-            incidunt veniam aperiam velit officiis, explicabo nisi voluptatum, corporis sequi omnis et temporibus
-            asperiores possimus?</p>
-        <a href="#"><i class="fa fa-whatsapp" aria-hidden="true"></i>
-            55-5555555</a>
-        <a href="#"><i class="fa fa-whatsapp" aria-hidden="true"></i>
-            axolotlSW@gmail.com</a>
-        <a href="#"><i class="fa fa-whatsapp" aria-hidden="true"></i>
-            Axolotl Software</a>
-        <a href="#"><i class="fa fa-whatsapp" aria-hidden="true"></i>
-            Axolotl Software</a>
+    <div class="card-body secciones_body">
+        <div class="row">
+            <div class="col-md-6">
+                <div class="form">
+                    <h2>Contacto</h2>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Rem expedita dignissimos neque, dolor ab tempora
+                        incidunt veniam aperiam velit officiis, explicabo nisi voluptatum, corporis sequi omnis et temporibus
+                        asperiores possimus?</p>
+                    <a href="#"><i class="fa fa-whatsapp" aria-hidden="true"></i>
+                        55-5555555</a>
+                    <a href="#"><i class="fa fa-whatsapp" aria-hidden="true"></i>
+                        axolotlSW@gmail.com</a>
+                    <a href="#"><i class="fa fa-whatsapp" aria-hidden="true"></i>
+                        Axolotl Software</a>
+                    <a href="#"><i class="fa fa-whatsapp" aria-hidden="true"></i>
+                        Axolotl Software</a>
+                </div>
+            </div>
+            <div class="col-md-6">
+                <form action="#" autocomplete="off">
+                    <input type="text" name="nombre" placeholder="Tu nombre o el de tu empresa" class="campo form-control">
+                    <input type="text" name="correro" placeholder="E-mail" class="campo form-control">
+                    <input type="text" name="nombre" placeholder="Telefono de contacto" class="campo form-control">
+                    <textarea name="mensaje" placeholder="Dejanos un mensaje" class="campo form-control"></textarea>
+                    <button class="enviar btn" type="submit">
+                        <span>
+                            Enviar
+                        </span>
+            
+                    </button>
+                </form>
+            </div>
+        </div>
     </div>
 
-    <form action="#" autocomplete="off">
-        <input type="text" name="nombre" placeholder="Tu nombre o el de tu empresa" class="campo">
-        <input type="text" name="correro" placeholder="E-mail" class="campo">
-        <input type="text" name="nombre" placeholder="Telefono de contacto" class="campo">
-        <textarea name="mensaje" placeholder="Dejanos un mensaje"></textarea>
-        <button class="enviar" type="submit">
-            <span>
-                Enviar
-            </span>
 
-        </button>
-    </form>
+
+
 </section>
-</div>
 
+<footer>
+
+</footer>
+</div>
+<script type="text/javascript">
+      window.addEventListener("scroll", function () {
+            var header = document.querySelector("header");
+            header.classList.toggle("abajo", window.scrollY > 0);
+        })
+</script>
 <script src="bootstrap-5.3.2-dist/js/bootstrap.bundle.min.js"></script>   
 </body>
 </html>
