--- a/index.html
+++ b/index.html
@@ -346,8 +346,8 @@
             <div class="col-md-6">
                 <form action="#" autocomplete="off">
                     <input type="text" name="nombre" placeholder="Tu nombre o el de tu empresa" class="campo form-control">
-                    <input type="text" name="correro" placeholder="E-mail" class="campo form-control">
-                    <input type="text" name="nombre" placeholder="Telefono de contacto" class="campo form-control">
+                    <input type="email" name="correro" placeholder="E-mail" class="campo form-control">
+                    <input type="tel" name="telefono" placeholder="Telefono de contacto" class="campo form-control">
                     <textarea name="mensaje" placeholder="Dejanos un mensaje" class="campo form-control"></textarea>
                     <button class="enviar btn" type="submit">
                         <span>
