--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="bootstrap-5.3.2-dist/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="public/css/estilos.css">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
 
      <title>AXOLOTL SOFTWARE</title>
      <link rel="shortcut icon" href="img/LOGO AXOLOTL 123.png" type="image/x-icon">
@@ -327,30 +328,31 @@
 <section class="contacto" id="contacto">
     <div class="card-body secciones_body">
         <div class="row">
-            <div class="col-md-6">
+            <div class="col-md-7">
                 <div class="form">
                     <h2>Contacto</h2>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Rem expedita dignissimos neque, dolor ab tempora
-                        incidunt veniam aperiam velit officiis, explicabo nisi voluptatum, corporis sequi omnis et temporibus
-                        asperiores possimus?</p>
-                    <a href="#"><i class="fa fa-whatsapp" aria-hidden="true"></i>
-                        55-5555555</a>
-                    <a href="#"><i class="fa fa-whatsapp" aria-hidden="true"></i>
-                        axolotlSW@gmail.com</a>
-                    <a href="#"><i class="fa fa-whatsapp" aria-hidden="true"></i>
-                        Axolotl Software</a>
-                    <a href="#"><i class="fa fa-whatsapp" aria-hidden="true"></i>
-                        Axolotl Software</a>
+                    <p>Somos una consultoría emergente de desarrollo web, 
+                     apasionados por la creación de soluciones digitales innovadoras para empresas
+                     de todos los tamaños. Con un equipo entusiasta de desarrolladores web talentosos, 
+                     nos especializamos en ofrecer servicios de consultoría personalizados para ayudar a nuestros clientes a 
+                     aprovechar al máximo su presencia en línea. Desde el diseño inicial hasta la implementación y el soporte continuo, 
+                     estamos comprometidos a ofrecer soluciones de desarrollo web de alta calidad que impulsen el éxito de nuestros clientes
+                     en el mundo digital. En este emocionante viaje de crecimiento, estamos listos para colaborar 
+                     contigo y hacer realidad tus ideas digitales.</p>
+                    <a href="https://api.whatsapp.com/?phone=5518661093"><i class="bi bi-whatsapp"></i>
+                        5518661093</a>
+                    <a href="mailto:axolotlsoftware.dev@gmail.com"><i class="bi bi-envelope-at"></i>
+                        axolotlsoftware.dev@gmail.com</a>
                 </div>
             </div>
-            <div class="col-md-6">
+            <div class="col-md-5">
                 <form action="#" autocomplete="off">
                     <input type="text" name="nombre" placeholder="Tu nombre o el de tu empresa" class="campo form-control">
                     <input type="email" name="correro" placeholder="E-mail" class="campo form-control">
                     <input type="tel" name="telefono" placeholder="Telefono de contacto" class="campo form-control">
                     <textarea name="mensaje" placeholder="Dejanos un mensaje" class="campo form-control"></textarea>
-                    <button class="enviar btn" type="submit">
-                        <span>
+                    <button class="enviar btn" type="submit" style="width: 100%;">
+                        <span style="width: 100%;">
                             Enviar
                         </span>
             
